[package]
name = "mrbgpdv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
thiserror = "1.0.37"
anyhow = "1.0.66"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
bytes = "1.3.0"
